@@ -15,11 +15,16 @@
 # There is no real automatic mounting yet.
 #
 
+# Force LC_ALL=C
+export LC_ALL=C
 
 # Source init.d functions
 . /etc/rc.status
 
-. /build/jlbec/osm/src-local/vendor/common/oracleasm.init.functions
+prefix=@prefix@
+exec_prefix=@exec_prefix@
+libdir=@libdir@
+. ${libdir}/oracleasm/oracleasm.init.functions
 
 # Source networking configuration
 [ -f /etc/sysconfig/oracleasm ] && . /etc/sysconfig/oracleasm
